syntax = "proto3";

package auth;

option go_package = "/pb";

service UserService {
  rpc GenerateToken(GenerateTokenRequest) returns (GenerateTokenResponse);
  rpc ValidateToken(ValidateTokenRequest) returns (ValidateTokenResponse);
  rpc RefreshToken(RefreshTokenRequest) returns (RefreshTokenResponse);
}

message GenerateTokenRequest {
  int32 user_id = 1;
}

message GenerateTokenResponse {
  string token = 1;
}

message ValidateTokenRequest {
  string token = 1;
}

message ValidateTokenResponse {
  bool valid = 1;
}

message RefreshTokenRequest {
  string token = 1;
}

message RefreshTokenResponse {
  string token = 1;
}